# 2D-Engine

./: CMakeLists.txt  Circle.cpp  Circle.h  README.md  main.cpp
dependencies/include/glad/: glad.h
dependencies/lib/: glad.c
